# bazel-platforms-question

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  main.c
